--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: CoordinatesPlugin
-main: com.example.CoordinatesPlugin
+main: com.parryproject.CoordinatesPlugin
 version: 1.0
 api-version: 1.20
 description: Displays player coordinates in the Action Bar.
