--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
             <version>1.20.1-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+         <dependency>
+            <groupId>javax.json</groupId>
+            <artifactId>javax.json-api</artifactId>
+            <version>1.1.4</version>
+            <scope>compile</scope>
+         </dependency>
     </dependencies>
     <build>
         <plugins>
